<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="weather"
            type="com.nals.demo.data.home.entities.Weather" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/margin_32"
                    app:visible="@{weather != null}">

                    <ImageView
                        android:id="@+id/imvWeather"
                        android:layout_width="@dimen/home_weather_icon"
                        android:layout_height="@dimen/home_weather_icon"
                        app:layout_constraintBottom_toTopOf="@id/tvTemperature"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.nals.demo.view.AnimateNumberTextView
                        android:id="@+id/tvTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/blueDark"
                        android:textSize="@dimen/text_size_temperature"
                        app:layout_constraintBottom_toTopOf="@id/tvStateName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imvWeather" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/c"
                        android:textColor="@color/blueDark"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="@id/tvTemperature"
                        app:layout_constraintStart_toEndOf="@id/tvTemperature" />

                    <TextView
                        android:id="@+id/tvStateName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:includeFontPadding="false"
                        android:text="@{weather.weatherStateName}"
                        android:textColor="@color/blueLight"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="@id/tvTemperature"
                        app:layout_constraintBottom_toTopOf="@id/tvDate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15"
                        app:layout_constraintBottom_toTopOf="@id/layoutHumidity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutHumidity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_32"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:background="@drawable/bg_humidity"
                        android:paddingVertical="@dimen/margin_32"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layoutPredictability"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.nals.demo.view.CustomProgressView
                            android:id="@+id/progressViewHumidity"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginHorizontal="@dimen/margin_24"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/viewHumidityPercent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="bottom|center_horizontal"
                            app:layout_constraintTop_toBottomOf="@id/progressViewHumidity">

                            <com.nals.demo.view.AnimateNumberTextView
                                android:id="@+id/tvHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/white"
                                android:textSize="32sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/percent"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_15"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/viewHumidityPercent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutPredictability"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_32"
                        android:background="@drawable/bg_predictability"
                        android:paddingVertical="@dimen/margin_32"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/layoutHumidity">

                        <com.nals.demo.view.CustomProgressView
                            android:id="@+id/progressViewPredictability"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginHorizontal="@dimen/margin_24"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/viewPredictabilityPercent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="bottom|center_horizontal"
                            app:layout_constraintTop_toBottomOf="@id/progressViewPredictability">

                            <com.nals.demo.view.AnimateNumberTextView
                                android:id="@+id/tvPredictability"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/white"
                                android:textSize="32sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:text="@string/percent"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/predictability"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_15"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/viewPredictabilityPercent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>